--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   push:
     branches: [ main, master ]
+    tags:
+      - "v*"
   pull_request:
     branches: [ main, master ]
 
@@ -17,8 +19,12 @@ jobs:
     - run: cargo clippy -- -D warnings
     - run: cargo fmt --check
 
-  build:
+  release:
+    # Only run when a tag push triggers the workflow
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v4
     - uses: taiki-e/upload-rust-binary-action@v1
