--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,14 @@ jobs:
     - uses: taiki-e/upload-rust-binary-action@v1
       with:
         bin: lazyslurm
-        target: x86_64-unknown-linux-gnu,x86_64-unknown-linux-musl,x86_64-apple-darwin,aarch64-apple-darwin,x86_64-pc-windows-msvc
+        target: |
+          x86_64-unknown-linux-gnu
+          x86_64-unknown-linux-musl
+          x86_64-apple-darwin
+          aarch64-apple-darwin
+          x86_64-pc-windows-msvc
         archive: $bin-$target
         checksum: sha256
+        use-cross: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
