--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "lazyslurm"
 version = "0.1.5"
 edition = "2024"
-description = "A terminal UI for monitoring and managing SLURM jobs"
+description = "A terminal UI for monitoring and managing slurm jobs"
 license = "MIT"
 authors = ["Tom Hill <tom@hill.xyz>"]
 repository = "https://github.com/hill/lazyslurm"
